--- a/content/differential_ops/differential_ops_demo.ipynb
+++ b/content/differential_ops/differential_ops_demo.ipynb
@@ -27,20 +27,20 @@
     "def gradient(f: Field[Edge], nx: Field[Edge], ny: Field[Edge], L: Field[Edge], A: Field[Cell], edge_orientation: Field[Cell > Edge], \n",
     "                f_x: Field[Cell], f_y: Field[Cell]):\n",
     "  with levels_downward:\n",
-    "    f_x = 0\n",
-    "    f_y = 0\n",
+    "    f_x = sum_over(Cell > Edge, f * nx * L * edge_orientation) / A\n",
+    "    f_y = sum_over(Cell > Edge, f * ny * L * edge_orientation) / A\n",
     "\n",
     "@stencil\n",
     "def divergence(u: Field[Edge], v: Field[Edge], nx: Field[Edge], ny: Field[Edge], L: Field[Edge], A: Field[Cell], edge_orientation: Field[Cell > Edge],\n",
     "                  uv_div: Field[Cell]):\n",
     "  with levels_downward:\n",
-    "    uv_div = 0\n",
+    "    uv_div = sum_over(Cell > Edge, (u*nx + v*ny) * L * edge_orientation) / A\n",
     "\n",
     "@stencil\n",
     "def curl(u: Field[Edge], v: Field[Edge], nx: Field[Edge], ny: Field[Edge], dualL: Field[Edge], dualA: Field[Vertex], edge_orientation: Field[Vertex > Edge],\n",
     "            uv_curl: Field[Vertex]):\n",
     "  with levels_downward:\n",
-    "    uv_curl = 0"
+    "    uv_curl = sum_over(Vertex > Edge, (u*nx + v*ny) * dualL * edge_orientation) / dualA"
    ]
   },
   {
@@ -100,7 +100,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!./runner divergence"
+    "!./runner gradient"
    ]
   },
   {
@@ -116,7 +116,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%run checker.py divergence"
+    "%run checker.py gradient"
    ]
   }
  ],
