--- a/content/laplacian/laplacian_demo.ipynb
+++ b/content/laplacian/laplacian_demo.ipynb
@@ -45,9 +45,20 @@
     "\n",
     "    with levels_upward as k:\n",
     "\n",
-    "        # TODO: implement FVM vector Laplacian\n",
-    "        pass\n",
-    "        \n"
+    "        # compute curl (on vertices)\n",
+    "        uv_curl = sum_over(Vertex > Edge, (u*nx + v*ny) * dualL * edge_orientation_vertex) / dualA\n",
+    "\n",
+    "        # compute divergence (on cells)\n",
+    "        uv_div = sum_over(Cell > Edge, (u*nx + v*ny) * L * edge_orientation_cell) / A\n",
+    "\n",
+    "        # first term of of nabla2 (gradient of curl)\n",
+    "        grad_of_curl = sum_over(Edge > Vertex, uv_curl, weights=[-1., 1, ])*tangent_orientation/L\n",
+    "\n",
+    "        # second term of of nabla2 (gradient of divergence)\n",
+    "        grad_of_div = sum_over(Edge > Cell, uv_div, weights=[-1., 1, ])/dualL        \n",
+    "\n",
+    "        # finalize nabla2 (difference between the two gradients)\n",
+    "        uv_nabla2 = grad_of_div - grad_of_curl\n"
    ]
   },
   {
