--- a/content/shallow_water/shallow_water_demo.ipynb
+++ b/content/shallow_water/shallow_water_demo.ipynb
@@ -35,8 +35,33 @@
     "                     Grav: Field[Cell]):\n",
     "\n",
     "    with levels_downward:\n",
-    "        # TODO replace with shallow water solver\n",
-    "        pass\n"
+    "        # lerp cell quantities to edges\n",
+    "        hE = sum_over(Edge > Cell, hC, weights=[1-alpha, alpha])\n",
+    "        uE = sum_over(Edge > Cell, uC, weights=[1-alpha, alpha])\n",
+    "        vE = sum_over(Edge > Cell, vC, weights=[1-alpha, alpha])\n",
+    "    \n",
+    "        # boundary conditions on cells\n",
+    "        if (boundary_edges):\n",
+    "            uE = 0.\n",
+    "            vE = 0.\n",
+    "\n",
+    "        # height field gradient \n",
+    "        hC_x = sum_over(Cell > Edge, hE * nx * L * edge_orientation) / A\n",
+    "        hC_y = sum_over(Cell > Edge, hE * ny * L * edge_orientation) / A\n",
+    "\n",
+    "        # height field gradient is zero on the boundaries\n",
+    "        if (boundary_cells):\n",
+    "            hC_x = 0.\n",
+    "            hC_y = 0.\n",
+    "\n",
+    "        # divergence of velocity field\n",
+    "        uvC_div = sum_over(Cell > Edge, (uE*nx + vE*ny)\n",
+    "                           * edge_orientation * L) / A\n",
+    "\n",
+    "        # build ODE's\n",
+    "        uC_t = Grav * hC_x\n",
+    "        vC_t = Grav * hC_y\n",
+    "        hC_t = -hC * uvC_div\n"
    ]
   },
   {
