Synced hello_world solutions

--- a/content/hello_world/hello_world_solution.ipynb
+++ b/content/hello_world/hello_world_solution.ipynb
@@ -144,21 +144,21 @@
    "source": [
     "### Displaying the absolute-value norm on a triangular mesh\n",
     "\n",
-    "In this exercise, we want to plot the absolute-value norm on a triangular mesh. The absolute-value norm for a two dimensional vector $ x $ is defined as:\n",
+    "In this exercise, we want to plot the absolute-value norm on a triangular mesh. The absolute-value norm for a two dimensional vector $ \\textbf{x} $ is defined as:\n",
     "\n",
-    "$$ | x | = | x_1 | + | x_2 | $$\n",
+    "$$ | \\textbf{x} | = | x_1 | + | x_2 | $$\n",
     "\n",
-    "Where $ x_1 $ and $ x_2 $ are the two components of $ x $.\n",
+    "Where $ x_1 $ and $ x_2 $ are the two scalar components of $ \\textbf{x} $.\n",
     "\n",
     "Our grid will be of size 54x54, so we want to center the norm around $ (27, 27) $. To get some nice contour lines, we will use the floor function. Additionally, we will scale the result by 10 before applying the floor function.\n",
     "\n",
     "All together this gives us:\n",
     "\n",
-    "$$ c = \\left \\lfloor \\frac{| x - v |}{10} \\right \\rfloor, v = \\begin{pmatrix} 27 \\\\ 27 \\end{pmatrix} $$\n",
+    "$$ c = \\left \\lfloor \\frac{| \\textbf{x} - \\textbf{v} |}{10} \\right \\rfloor, \\textbf{v} = \\begin{pmatrix} 27 \\\\ 27 \\end{pmatrix} $$\n",
     "\n",
     "Hint: In dusk you can use `fabs(a)` for $ | a | $ and `floor(b)` for $ \\lfloor b \\rfloor $.\n",
     "\n",
-    "Hint: Dusk doesn't support vectors. It's probably best to write $ v $'s components separately as constants.\n",
+    "Hint: Dusk doesn't support vectors. It's probably best to write $ \\textbf{v} $'s components separately as constants.\n",
     "\n",
     "Below is a skeleton that you can fill out to prepare the contour plot:"
    ]
@@ -477,6 +477,10 @@
     "* Apply curve\n",
     "\n",
     "* Scale channel back from $ [0, 1] $ to $ [0, 255] $ linearly\n",
+    "\n",
+    "Hint: The power operator can be written in dusk as `x**y`. Take care that all operands are floats (and not integers), otherwise you might trigger spurious type errors. Alternatively, you can also write it as `pow(x, y)`.\n",
+    "\n",
+    "Note: Since we have to apply the same operation for all three color channels, you will probably end up with quite a few code clones. In the future, we will support functions inside stencils, so that we can avoid such code clones.\n",
     "\n",
     "We have provided you with the following skeleton:"
    ]
