Add Master Solutions (#48)
Master Solutions and a Correction in SWE

--- a/content/diffusion/diffusion_solution.ipynb
+++ b/content/diffusion/diffusion_solution.ipynb
@@ -4,14 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# This notebook demos a shallow water stencil"
+    "# This notebook demos a diffusion stencil"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We first write our shallow water stencil:"
+    "Here follows the diffusion stencil"
    ]
   },
   {
@@ -24,26 +24,55 @@
     "\n",
     "\n",
     "@stencil\n",
-    "def shallow_water(hC: Field[Cell], hC_t: Field[Cell],\n",
-    "                     vC: Field[Cell], vC_t: Field[Cell],\n",
-    "                     uC: Field[Cell], uC_t: Field[Cell],\n",
-    "                     hC_x: Field[Cell], hC_y: Field[Cell], uvC_div: Field[Cell],\n",
-    "                     hE: Field[Edge], vE: Field[Edge], uE: Field[Edge],\n",
-    "                     nx: Field[Edge], ny: Field[Edge], L: Field[Edge], alpha: Field[Edge],\n",
-    "                     boundary_edges: Field[Edge], boundary_cells: Field[Cell],\n",
-    "                     A: Field[Cell], edge_orientation: Field[Cell > Edge],\n",
-    "                     Grav: Field[Cell]):\n",
+    "def diffusion(\n",
+    "    TV: Field[Vertex],\n",
+    "    TE: Field[Edge], TEinit: Field[Edge], TE_t: Field[Edge], TEnabla2: Field[Edge],\n",
+    "    inv_primal_edge_length: Field[Edge], inv_vert_vert_length: Field[Edge], nnbhV: Field[Vertex],\n",
+    "    boundary_edge: Field[Edge],\n",
+    "    kappa: Field[Edge], dt: Field[Edge]\n",
+    ") -> None:\n",
     "\n",
-    "    with levels_downward:\n",
-    "        # TODO replace with shallow water solver\n",
-    "        pass\n"
+    "    with levels_upward:\n",
+    "       # initialize\n",
+    "        TEinit = TE\n",
+    "    \n",
+    "        # predict\n",
+    "        TE = TEinit + 0.5*dt*TE_t\n",
+    "\n",
+    "        # interpolate temperature from edges to vertices\n",
+    "        TV = sum_over(Vertex > Edge, TE) / nnbhV\n",
+    "\n",
+    "        # compute nabla2 using the finite differences\n",
+    "        TEnabla2 = sum_over(\n",
+    "            Edge > Cell > Vertex,\n",
+    "            TV,\n",
+    "            weights=[\n",
+    "                inv_primal_edge_length ** 2.,\n",
+    "                inv_primal_edge_length ** 2.,\n",
+    "                inv_vert_vert_length ** 2.,\n",
+    "                inv_vert_vert_length ** 2.,\n",
+    "            ],\n",
+    "        )\n",
+    "        TEnabla2 = TEnabla2 - (\n",
+    "            (2.0 * TE * inv_primal_edge_length ** 2.)\n",
+    "            + (2.0 * TE * inv_vert_vert_length ** 2.)\n",
+    "        )\n",
+    "    \n",
+    "        # build ODEs\n",
+    "        if (boundary_edge):\n",
+    "            TE_t = 0.\n",
+    "        else:\n",
+    "            TE_t = kappa*TEnabla2\n",
+    "    \n",
+    "        # correct\n",
+    "        TE = TEinit + dt*TE_t\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Then we can use dusk's Python API to convert the stencils to SIR. This API can also invoke dawn to compile SIR to C++ which we will write to `shallow_water_cxx-naive.cpp`:"
+    "Then we can use dusk's Python API to convert the stencils to SIR. This API can also invoke dawn to compile SIR to C++ which we will write to `diffusion_cxx-naive.cpp`:"
    ]
   },
   {
@@ -53,10 +82,10 @@
    "outputs": [],
    "source": [
     "from dusk.transpile import callable_to_pyast, pyast_to_sir, sir_to_json\n",
-    "with open(\"shallow_water.sir\", \"w+\") as f:\n",
-    "    sir = pyast_to_sir(callable_to_pyast(shallow_water))\n",
+    "with open(\"diffusion.sir\", \"w+\") as f:\n",
+    "    sir = pyast_to_sir(callable_to_pyast(diffusion))\n",
     "    f.write(sir_to_json(sir))\n",
-    "!dawn-opt shallow_water.sir | dawn-codegen -b naive-ico -o shallow_water_cxx-naive.cpp"
+    "!dawn-opt diffusion.sir | dawn-codegen -b naive-ico -o diffusion_cxx-naive.cpp"
    ]
   },
   {
@@ -95,7 +124,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If the tester reported that your dusk stencil works correctly, you can now run the complete stencil and visualize. It takes quite a while to run. Its finished after 400 time steps."
+    "If the tester reported that your dusk stencil works correctly, you can now run the complete stencil and visualize"
    ]
   },
   {
@@ -119,7 +148,6 @@
     "import prep_animation as pa\n",
     "import matplotlib.animation as animation\n",
     "from IPython.display import HTML\n",
-    "\n",
     "animate = animation.FuncAnimation(pa.fig, pa.update_plot, len(pa.out_files), fargs=(pa.zarray, pa.plot), interval = 50)"
    ]
   },
