--- a/content/laplacian/laplacian_exercise.ipynb
+++ b/content/laplacian/laplacian_exercise.ipynb
@@ -44,10 +44,9 @@
     ") -> None:\n",
     "\n",
     "    with levels_upward as k:\n",
-    "\n",
-    "        # TODO: implement FVM vector Laplacian\n",
+    "        # todo: implement laplacian\n",
     "        pass\n",
-    "        \n"
+    "       \n"
    ]
   },
   {
