--- a/content/shallow_water/shallow_water_solution.ipynb
+++ b/content/shallow_water/shallow_water_solution.ipynb
@@ -4,14 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# This notebook demos a diffusion stencil"
+    "# This notebook demos a shallow water stencil"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here follows the diffusion stencil"
+    "We first write our shallow water stencil:"
    ]
   },
   {
@@ -24,24 +24,51 @@
     "\n",
     "\n",
     "@stencil\n",
-    "def diffusion(\n",
-    "    TV: Field[Vertex],\n",
-    "    TE: Field[Edge], TEinit: Field[Edge], TE_t: Field[Edge], TEnabla2: Field[Edge],\n",
-    "    inv_primal_edge_length: Field[Edge], inv_vert_vert_length: Field[Edge], nnbhV: Field[Vertex],\n",
-    "    boundary_edge: Field[Edge],\n",
-    "    kappa: Field[Edge], dt: Field[Edge]\n",
-    ") -> None:\n",
+    "def shallow_water(hC: Field[Cell], hC_t: Field[Cell],\n",
+    "                     vC: Field[Cell], vC_t: Field[Cell],\n",
+    "                     uC: Field[Cell], uC_t: Field[Cell],\n",
+    "                     hC_x: Field[Cell], hC_y: Field[Cell], uvC_div: Field[Cell],\n",
+    "                     hE: Field[Edge], vE: Field[Edge], uE: Field[Edge],\n",
+    "                     nx: Field[Edge], ny: Field[Edge], L: Field[Edge], alpha: Field[Edge],\n",
+    "                     boundary_edges: Field[Edge], boundary_cells: Field[Cell],\n",
+    "                     A: Field[Cell], edge_orientation: Field[Cell > Edge],\n",
+    "                     Grav: Field[Cell]):\n",
     "\n",
-    "    with levels_upward:\n",
-    "        #TODO replace with diffusion solver\n",
-    "        pass    \n"
+    "    with levels_downward:\n",
+    "        # lerp cell quantities to edges\n",
+    "        hE = sum_over(Edge > Cell, hC, weights=[1-alpha, alpha])\n",
+    "        uE = sum_over(Edge > Cell, uC, weights=[1-alpha, alpha])\n",
+    "        vE = sum_over(Edge > Cell, vC, weights=[1-alpha, alpha])\n",
+    "    \n",
+    "        # boundary conditions on cells\n",
+    "        if (boundary_edges):\n",
+    "            uE = 0.\n",
+    "            vE = 0.\n",
+    "\n",
+    "        # height field gradient \n",
+    "        hC_x = sum_over(Cell > Edge, hE * nx * L * edge_orientation) / A\n",
+    "        hC_y = sum_over(Cell > Edge, hE * ny * L * edge_orientation) / A\n",
+    "\n",
+    "        # height field gradient is zero on the boundaries\n",
+    "        if (boundary_cells):\n",
+    "            hC_x = 0.\n",
+    "            hC_y = 0.\n",
+    "\n",
+    "        # divergence of velocity field\n",
+    "        uvC_div = sum_over(Cell > Edge, (uE*nx + vE*ny)\n",
+    "                           * edge_orientation * L) / A\n",
+    "\n",
+    "        # build ODE's\n",
+    "        uC_t = Grav * hC_x\n",
+    "        vC_t = Grav * hC_y\n",
+    "        hC_t = -hC * uvC_div\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Then we can use dusk's Python API to convert the stencils to SIR. This API can also invoke dawn to compile SIR to C++ which we will write to `diffusion_cxx-naive.cpp`:"
+    "Then we can use dusk's Python API to convert the stencils to SIR. This API can also invoke dawn to compile SIR to C++ which we will write to `shallow_water_cxx-naive.cpp`:"
    ]
   },
   {
@@ -51,10 +78,10 @@
    "outputs": [],
    "source": [
     "from dusk.transpile import callable_to_pyast, pyast_to_sir, sir_to_json\n",
-    "with open(\"diffusion.sir\", \"w+\") as f:\n",
-    "    sir = pyast_to_sir(callable_to_pyast(diffusion))\n",
+    "with open(\"shallow_water.sir\", \"w+\") as f:\n",
+    "    sir = pyast_to_sir(callable_to_pyast(shallow_water))\n",
     "    f.write(sir_to_json(sir))\n",
-    "!dawn-opt diffusion.sir | dawn-codegen -b naive-ico -o diffusion_cxx-naive.cpp"
+    "!dawn-opt shallow_water.sir | dawn-codegen -b naive-ico -o shallow_water_cxx-naive.cpp"
    ]
   },
   {
@@ -93,7 +120,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If the tester reported that your dusk stencil works correctly, you can now run the complete stencil and visualize"
+    "If the tester reported that your dusk stencil works correctly, you can now run the complete stencil and visualize. It takes quite a while to run. Its finished after 400 time steps."
    ]
   },
   {
@@ -117,6 +144,7 @@
     "import prep_animation as pa\n",
     "import matplotlib.animation as animation\n",
     "from IPython.display import HTML\n",
+    "\n",
     "animate = animation.FuncAnimation(pa.fig, pa.update_plot, len(pa.out_files), fargs=(pa.zarray, pa.plot), interval = 50)"
    ]
   },
