--- a/content/hello_world/hello_world_solution.ipynb
+++ b/content/hello_world/hello_world_solution.ipynb
@@ -156,7 +156,7 @@
     "\n",
     "$$ c = \\left \\lfloor \\frac{| \\textbf{x} - \\textbf{v} |}{10} \\right \\rfloor, \\textbf{v} = \\begin{pmatrix} 27 \\\\ 27 \\end{pmatrix} $$\n",
     "\n",
-    "Hint: In dusk you can use `fabs(a)` for $ | a | $ and `floor(b)` for $ \\lfloor b \\rfloor $.\n",
+    "Hint: In dusk you can use `abs(a)` for $ | a | $ and `floor(b)` for $ \\lfloor b \\rfloor $.\n",
     "\n",
     "Hint: Dusk doesn't support vectors. It's probably best to write $ \\textbf{v} $'s components separately as constants.\n",
     "\n",
@@ -179,7 +179,7 @@
     "):\n",
     "    with levels_upward:\n",
     "        # We want to store the floored and scaled absolute norm into `c`:\n",
-    "        c = fabs(x - 27) + fabs(y - 27)\n",
+    "        c = abs(x - 27) + abs(y - 27)\n",
     "        c = floor(c/10)"
    ]
   },
