Added link to repo

--- a/content/welcome.ipynb
+++ b/content/welcome.ipynb
@@ -20,7 +20,9 @@
     "\n",
     "5) `diffusion` exercises building a diffusion stencil.\n",
     "\n",
-    "6) `shallow_water` is the final exercise where a simplified shallow water model is implemented."
+    "6) `shallow_water` is the final exercise where a simplified shallow water model is implemented.\n",
+    "\n",
+    "The notebooks are developed here: [https://github.com/dawn-ico/dusk-dawn-notebook](https://github.com/dawn-ico/dusk-dawn-notebook)"
    ]
   }
  ],
