--- a/content/welcome.ipynb
+++ b/content/welcome.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Welcome to the dusk/dawn exercise notebook!\n",
     "\n",
-    "This jupyter lab session contains exercises to learn about dusk & dawn. It was created for the [ESiWACE2 DSL workshop](https://www.esiwace.eu/events/esiwace2-dsl-training/esiwace-2-domain-specific-language-dsl-training).\n",
+    "This jupyter lab session contains exercises to learn about dusk & dawn.\n",
     "\n",
     "In each folder is an exercise:\n",
     "\n",
@@ -23,6 +23,31 @@
     "6) `shallow_water` is the final exercise where a simplified shallow water model is implemented.\n",
     "\n",
     "The notebooks are developed here: [https://github.com/dawn-ico/dusk-dawn-notebook](https://github.com/dawn-ico/dusk-dawn-notebook)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Update the exercises\n",
+    "\n",
+    "Before starting the exercises, please make sure to update this repository by executing the cell below. Make sure to reload your open notebooks afterwards (File -> Reload Notebook from Disk).\n",
+    "\n",
+    "Warning: This will remove all changes so far!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# remove untracked files\n",
+    "!git clean -fdx\n",
+    "# remove changes to tracked files\n",
+    "!git reset --hard ecmwf_vm_fixes\n",
+    "# update repository\n",
+    "!git pull"
    ]
   }
  ],
@@ -42,7 +67,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.9.4"
   }
  },
  "nbformat": 4,
